# skyEdu

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MENU_SYSTEM_IMPLEMENTATION.md  README.md  package-lock.json  package.json  run.sh  start-all.bat  start-backend.bat  start-frontend.bat
backend/: .env.example  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 7fd8b65372f7_add_audit_columns_to_all_tables.py  8a68f8ad84e6_initial_migration.py  a6fe78c613fb_add_system_settings_table.py  c1a2b3d4e5f6_add_board_tables.py  d33a6c5f2c1a_add_feature_key_to_menus_table.py  ddb996766686_add_is_volunteer_to_managers.py  f72dc939c68d_add_menus_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  auth.py  boards.py  health.py  managers.py  menus.py  (+6 more)
backend/app/core/: board_constants.py  board_exceptions.py  config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  board.py  manager.py  menu.py  payment.py  promotion.py  reservation.py  review.py  system_settings.py  user.py  user_group.py
backend/app/schemas/: __init__.py  auth.py  board.py  manager.py  menu.py  payment.py  promotion.py  reservation.py  review.py  system_settings.py  user.py  user.py.bak  user_group.py
backend/app/services/: __init__.py  board.py  price.py  reservation.py
backend/scripts/: create_dev_admin.py  init_system_settings.py  init_user_menus.py  seed_groups.py  seed_managers.py
(+111 files in other folders)
